# friedrich

./: README.md  main.py  pyproject.toml
data/: Data_clean.xlsx  Data_clean_transformed.xlsx  data1.xlsx
