[tool.poetry]
name = "friedrich"
version = "0.1.0"
description = ""
authors = ["Hans Rauer <h.w.rauer@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
